--- a/AutomobileLibrary/AutomobileLibrary.csproj
+++ b/AutomobileLibrary/AutomobileLibrary.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -17,6 +17,10 @@
   <ItemGroup>
     <Folder Include="BusinessObject\" />
     <Folder Include="DataAccess\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="3.0.4" />
   </ItemGroup>
 
 </Project>
